src/fhiclcpp/fhiclcpp/test/testFiles/pass/ref_pass.fcl
#===========================================
# Testing Reference Syntax
#===========================================

x : 5
y : 6
z : 7

a : @local::x
b : @local::y
c : @local::z
