src/fhiclcpp/fhiclcpp/test/testFiles/fail/ref_fail.fcl
#===========================================
# Testing Incorrect Reference Syntax
# What's Wrong: Single/No Colon
#===========================================

x : 5
y : @local:x
